# AstraDroneOpen

./: .gitignore  LICENSE  README.md
AstraDrone_ros1_ws/src/Communication/uav_bridge/: CMakeLists.txt  README.md  my_service.service  package.xml
AstraDrone_ros1_ws/src/Communication/uav_bridge/debug/: debug_station.py  debug_station_old.py
AstraDrone_ros1_ws/src/Communication/uav_bridge/launch/: arm_offboard.launch  bridge.launch  start_sdk.launch  video_stream.launch
AstraDrone_ros1_ws/src/Communication/uav_bridge/scripts/: monitor_client.py  test.py  uav_bridge_sdk.py
AstraDrone_ros1_ws/src/Control/rc_obstacle_avoidance/: CMakeLists.txt  README.md  package.xml
AstraDrone_ros1_ws/src/Control/rc_obstacle_avoidance/config/: rc_obstacle_avoidance.yaml
AstraDrone_ros1_ws/src/Control/rc_obstacle_avoidance/launch/: rc_obstacle_avoidance.launch
AstraDrone_ros1_ws/src/Control/rc_obstacle_avoidance/src/: rc_obstacle_avoidance_node.cpp
AstraDrone_ros1_ws/src/Detection/aruco_localization/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Detection/aruco_localization/camera_info/: chiny_cam.yaml  sim_cam.yaml
AstraDrone_ros1_ws/src/Detection/aruco_localization/launch/: aruco_detect.launch
AstraDrone_ros1_ws/src/Detection/aruco_localization/params/: aruco_board_meter_v2_1.yaml  aruco_land_board.yaml  aruco_land_board_meter.yaml  aruco_land_v1.yaml
AstraDrone_ros1_ws/src/Detection/aruco_localization/src/: aruco_localization_node.cpp  tf_manage.cpp
AstraDrone_ros1_ws/src/Detection/target_prediction/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Detection/target_prediction/msg/: MarkerMeasurement.msg  target_pre_state.msg
AstraDrone_ros1_ws/src/Detection/target_prediction/script/: EKF_prediction.py  UKF_prediction.py
AstraDrone_ros1_ws/src/Detection/target_prediction/src/: EKF_prediction.cpp  kalman_filter.cpp  kalman_filter_dynamic.cpp
AstraDrone_ros1_ws/src/Exploration/FUEL/eva_metric/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Land/astra_auto_land/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Land/astra_auto_land/launch/: astra_static_land.launch
AstraDrone_ros1_ws/src/Land/astra_auto_land/src/: astra_static_land.cpp
AstraDrone_ros1_ws/src/Land/astra_auto_land/srv/: PrecisionLandingActivate.srv
AstraDrone_ros1_ws/src/SLAM/FreeDOM/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/SLAM/FreeDOM/config/: helimos_aeva.yaml  helimos_livox.yaml  helimos_ouster.yaml  helimos_velodyne.yaml  indoor_corridor.yaml  indoor_stairs.yaml  kitti_velodyne.yaml  mid360.yaml  rviz.rviz  rviz_indoor.rviz
AstraDrone_ros1_ws/src/SLAM/FreeDOM/launch/: run_freedom_mid360.launch
AstraDrone_ros1_ws/src/SLAM/FreeDOM/src/: depth_image.cpp  freedom.cpp  freenode.cpp  map.cpp  mrmap.cpp  node.cpp  raycast.cpp  scanmap.cpp  visualization.cpp
AstraDrone_ros1_ws/src/Utils/astra_custom_msgs/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Utils/astra_custom_msgs/msg/: DroneStatus.msg
AstraDrone_ros1_ws/src/Utils/astra_custom_msgs/srv/: MissionCommand.srv
AstraDrone_ros1_ws/src/Utils/camera_sdk/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Utils/camera_sdk/cfg/: CameraConfig.cfg
AstraDrone_ros1_ws/src/Utils/camera_sdk/launch/: camera_video0.launch
AstraDrone_ros1_ws/src/Utils/camera_sdk/param/: camera_param.yaml  video0.yaml
AstraDrone_ros1_ws/src/Utils/camera_sdk/script/: camera_sdk.py
AstraDrone_ros1_ws/src/Utils/camera_sdk/src/: camera_sdk_node.cpp
AstraDrone_ros1_ws/src/Utils/csi_camera_driver/: CMakeLists.txt  package.xml  readme.md
AstraDrone_ros1_ws/src/Utils/csi_camera_driver/cfg/: Camera.cfg
AstraDrone_ros1_ws/src/Utils/csi_camera_driver/launch/: csi_camera.launch
AstraDrone_ros1_ws/src/Utils/csi_camera_driver/params/: video0 copy.yaml  video0.yaml
AstraDrone_ros1_ws/src/Utils/csi_camera_driver/src/: csi_camera_node.cpp
AstraDrone_ros1_ws/src/Utils/fake_slam/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Utils/fake_slam/script/: pcd_loader.py
AstraDrone_ros1_ws/src/Utils/fake_slam/src/: map_generator_node.cpp
AstraDrone_ros1_ws/src/Utils/lidar_cam_fusion/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Utils/lidar_cam_fusion/config/: lidar_cam_fusion.yaml
AstraDrone_ros1_ws/src/Utils/lidar_cam_fusion/launch/: fusion.launch
AstraDrone_ros1_ws/src/Utils/lidar_cam_fusion/rviz_config/: fusion.rviz
AstraDrone_ros1_ws/src/Utils/lidar_cam_fusion/src/: lidar_cam_fusion.cpp
AstraDrone_ros1_ws/src/Utils/lidar_cam_fusion/srv/: EstimateDepth.srv
AstraDrone_ros1_ws/src/Utils/livox_ros_driver2/: CMakeLists.txt  README.md  package.xml
AstraDrone_ros1_ws/src/Utils/livox_ros_driver2/config/: MID360_config.json
AstraDrone_ros1_ws/src/Utils/livox_ros_driver2/launch_ROS1/: msg_MID360.launch  msg_MID360s.launch  rviz_MID360.launch  rviz_MID360s.launch
AstraDrone_ros1_ws/src/Utils/livox_ros_driver2/launch_ROS2/: msg_HAP_launch.py  msg_MID360_launch.py  msg_MID360s_launch.py  rviz_HAP_launch.py  rviz_MID360_launch.py  rviz_MID360s_launch.py  rviz_mixed.py
AstraDrone_ros1_ws/src/Utils/livox_ros_driver2/src/: livox_ros_driver2.cpp
AstraDrone_ros1_ws/src/Utils/pixel2map/: CMakeLists.txt  package.xml
AstraDrone_ros1_ws/src/Utils/pixel2map/config/: camera_params.yaml
AstraDrone_ros1_ws/src/Utils/pixel2map/launch/: pixel2map.launch
AstraDrone_ros1_ws/src/Utils/pixel2map/msg/: PredictResult.msg
AstraDrone_ros1_ws/src/Utils/pixel2map/src/: pixel2map.cpp
AstraDrone_ros1_ws/src/Utils/topic_tf_tran/: CMakeLists.txt  package.xml  readme.md
AstraDrone_ros1_ws/src/Utils/topic_tf_tran/launch/: tf2topic.launch  topic2tf.launch
AstraDrone_ros1_ws/src/Utils/topic_tf_tran/src/: tf2topic.cpp  topic2tf.cpp
AstraDrone_ros2_ws/src/MissionControl/astra_control/: CMakeLists.txt  package.xml
AstraDrone_ros2_ws/src/MissionControl/astra_control/config/: params.yaml
AstraDrone_ros2_ws/src/MissionControl/astra_control/src/: astra_control.cpp
simulation/sim_workspace/src/craic_sim/: CMakeLists.txt  package.xml
simulation/sim_workspace/src/dynamic_obstacle_controller/: CMakeLists.txt  package.xml
(+384 files in other folders)
