<?xml version="1.0"?>
<package format="2">
  <name>uav_bridge</name>
  <version>1.0.0</version>
  <description>UAV Ground Station Communication Bridge</description>
  <maintainer email="user@domain.com">User</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend> <build_depend>message_generation</build_depend> <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend> <exec_depend>message_runtime</exec_depend> <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>