<?xml version="1.0"?>
<package format="2">
  <name>rc_obstacle_avoidance</name>
  <version>0.0.1</version>
  <description>RC-based obstacle avoidance interface bridging MAVROS RC input with Fast-Planner goals.</description>

  <maintainer email="maintainer@example.com">AstraDrone</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>tf</depend>

  <export></export>
</package>
