<?xml version="1.0"?>
<package format="2">
  <name>astra_custom_msgs</name>
  <version>1.0.0</version>
  <description>Centralized custom messages for AstraDrone project</description>
  
  <maintainer email="team@astradrone.com">AstraDrone Team</maintainer>
  <license>Apache 2.0</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 消息生成依赖 -->
  <build_depend>message_generation</build_depend>
  
  <!-- 预包含的常见消息依赖 -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  
  <!-- 运行时依赖 -->
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
</package>