<?xml version="1.0"?>
<package format="2">
  <name>csi_camera_driver</name>
  <version>0.1.0</version>
  <description>CSI camera driver using GStreamer (no OpenCV), publishes Image + CameraInfo loaded via camera_info_manager.</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <!-- 构建工具 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- 运行 & 构建 依赖（不要包含 OpenCV / cv_bridge） -->
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>gstreamer-rtsp-server</depend>

  <!-- pkg-config 仅在构建时需要（用于找 GStreamer） -->
  <build_depend>pkg-config</build_depend>

  <!-- 可选：如果你使用 dynamic_reconfigure，则加上两个依赖；不用就删掉 -->
  <!--
  <build_depend>dynamic_reconfigure</build_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  -->

  <export>
    <!-- 无需额外导出 -->
  </export>
</package>
