<?xml version="1.0"?>
<package format="2">
  <name>lidar_cam_fusion</name>
  <version>0.0.0</version>
  <description>The lidar_cam_fusion package</description>

  <maintainer email="uav@todo.todo">uav</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <build_depend>pcl_ros</build_depend>
  <exec_depend>pcl_ros</exec_depend>
  <build_depend>message_filters</build_depend>
  <exec_depend>message_filters</exec_depend>
  <export>

  </export>
</package>
