<?xml version="1.0"?>
<package format="2">
  <name>craic_sim</name>
  <version>0.0.0</version>
  <description>CRAIC simulation helpers and launch-time asset preparation scripts.</description>

  <maintainer email="jm@todo.todo">jm</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>

</package>
